# src/controllers/auth.controller.ts
@@ -25,7 +25,24 @@ const registerValidateSchema = yup.object().shape({
     fullName: yup.string().required(),
     username: yup.string().required(),
     email: yup.string().required(),
-    password: yup.string().required(),
+    password: yup.string().required().min(6, "password must be at least 6 characters")
+    .test(
+    'at-least-one-uppercase-letter', 
+    "contains at least one uppercase letter", 
+    (value) => {
+        if (!value) return false;
+        const regex = /^(?=.*[A-Z])/;
+        return regex.test(value);
+    }
+)    .test(
+    'at-least-one-number', 
+    "contains at least one uppercase letter", 
+    (value) => {
+        if (!value) return false;
+        const regex = /^(?=.*\d)/;
+        return regex.test(value);
+    }
+),
     confirmPassword: yup.string().required().oneOf([yup.ref('password'), ""], "Password must match") , 
 });
 
@@ -81,7 +98,6 @@ export default {
             schema: {$ref: "#/components/schemas/LoginRequest"}
          }
          */
-
                     const {
                         identifier,
                         password
@@ -98,6 +114,7 @@ export default {
                         username: identifier,
                     },
                 ],
+                isActive: true,
             });
 
             if (!userByIndentifier) {
@@ -168,5 +185,44 @@ export default {
         });  
         }
         
+    },
+
+    async activation(req: Request, res: Response) {
+/**
+ #swagger.tags = ['Auth']
+ #swagger.requestBody = {
+   required: true,
+   content: {
+     "application/json": {
+       schema: { $ref: "#/components/schemas/ActivationRequest" }
+     }
+   }
+ }
+ */
+
+        try {
+            const { code } = req.body as {code: string};
+        
+            const user = await UserModel.findOneAndUpdate({
+                activationCode: code,
+            },{
+                isActive: true,
+            },{
+                new: true,
+            }
+        );
+        res.status(200).json({
+            message: "Success Activation User",
+            data: user,
+        });
+
+        } catch (error) {
+            const err = error as unknown as Error;
+
+        res.status(400).json({
+            message: err.message,
+            data: null,
+        });
+        }
     }
 };
