# src/routes/api.ts
@@ -6,9 +6,8 @@ import authMiddleware from "../middlewares/auth.middleware";
 const router = express.Router();
 
 router.post("/auth/register", authController.register);
-
 router.post("/auth/login", authController.login);
-
 router.get("/auth/me", authMiddleware, authController.me); 
+router.post("/auth/activation", authController.activation);
 
 export default router;
